tweak sizes for mobile to fix header wrap

--- a/new-vector-enhanced.user.css
+++ b/new-vector-enhanced.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Wikim V.2022 Enhanced
 @namespace   StylishThemes
-@version     1.0.96
+@version     1.0.97
 @homepageURL https://github.com/quiddity-wp/wikimedia-style-tweaks/blob/master/new-vector-enhanced.user.css
 @updateURL   https://raw.githubusercontent.com/quiddity-wp/wikimedia-style-tweaks/master/new-vector-enhanced.user.css
 @license     CC-BY-SA-4.0
@@ -718,12 +718,12 @@ padding-right: 2px;
 }
   
 /* Force search-bar to show in site-header at smaller sizes */
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 420px) {
   .mw-header .vector-typeahead-search-container {
   display: block;
   }
 }
-@media screen and (min-width: 399px) {
+@media screen and (min-width: 419px) {
   .search-toggle {
     display: none !important;
   }
@@ -1195,7 +1195,7 @@ background: unset
 /* shorter search bar at thin viewport widths - otherwise it linewraps oddly */
 @media screen and (max-width: 723px) {
   #searchform{
-    max-width:30vw}
+    max-width:20vw}
 }
 
 /* fix search icon leaping */
